k8s/sample-workload/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-apache
  namespace: workloads
spec:
  replicas: 2
  selector:
    matchLabels:
      app: php-apache
  template:
    metadata:
      labels:
        app: php-apache
    spec:
      serviceAccountName: workload-sa
      containers:
        - name: php-apache
          image: registry.k8s.io/hpa-example
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 500m
              memory: 128Mi
            limits:
              cpu: 800m
              memory: 256Mi
      nodeSelector:
        nodegroup-type: workload

---
apiVersion: v1
kind: Service
metadata:
  name: php-apache
  namespace: workloads
spec:
  selector:
    app: php-apache
  ports:
    - port: 80
      targetPort: 80
